# repo2wasm-py

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: pypi-release.yml  test-examples.yml  unittest.yml
docs/source/: changelog.md  conf.py  get-started.md  github-actions.md  index.md  index.rst  limitations.md
docs/source/common-errors/: index.md  irkernel.md  octave-kernel.md  tidyverse.md
docs/source/contributor-guide/: architecture.md  docs.md  index.md
docs/source/get-started/: index.md
docs/source/user-guide/: cli.md  index.md  jupyterlite.md  supported-configuration-files.md  supported-ide.md  supported-programming-languages.md  supported-repository-providers.md
examples/conda/numpy/: environment.yml
examples/environment.yml/numpy/: environment.yml
examples/environment.yml/python-base/: environment.yml
examples/environment.yml/r-base/: environment.yml
examples/environment.yml/tidyverse/: environment.yml
examples/install.R/tidyverse/: install.R
examples/requirements.txt/requests/: test.ipynb
src/repo2wasm/: __init__.py  binder.py  cli.py  repo2wasm.py
src/repo2wasm/buildpacks/: base.py  conda.py  exceptions.py  install.py  requirements.py  test_utils.py  utils.py
