[project]
name = "repo2wasm"
description = "Turn code repositories into Wasm based integrated development environment (IDE)"
keywords = ["Wasm"]
authors = [{name = "Raniere Gaia Costa da Silva", email = "Raniere.CostadaSilva@gesis.org"}]
maintainers = [{name = "Raniere Gaia Costa da Silva", email = "Raniere.CostadaSilva@gesis.org"}]
dependencies = [ "jupyterlite-core>=0.6.4,<0.7", "jupyterlite-xeus>=4.2.2,<5", "pyyaml>=6.0.3,<7", "jupyter_server>=2.17.0,<3", "jupyterlab_server>=2.27.3,<3", "jupyter-repo2docker>=2025.8.0,<2026"]
requires-python = ">= 3.13"
dynamic = ["version"]
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Environment :: WebAssembly :: Emscripten",
    "Framework :: Jupyter :: JupyterLab",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://repo2wasm.readthedocs.io"
Documentation = "https://repo2wasm.readthedocs.io"
Repository = "https://github.com/repo2wasm/repo2wasm-py.git"
Issues = "https://github.com/repo2wasm/repo2wasm-py/issues"

[project.scripts]
repo2wasm = "repo2wasm:cli"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.version]
source = "vcs"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
repo2wasm = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
micromamba = ">=2.3.2,<3"

[tool.pixi.feature.release.dependencies]
python-build = "*"
twine = "*"

[tool.pixi.feature.release.tasks]
build = "rm -rf dist; python -m build"
upload = { cmd = "python3 -m twine upload --repository pypi dist/*", depends-on = ["build"] }

[tool.pixi.feature.rtd.dependencies]
sphinx = "*"
sphinx_rtd_theme = "*"
sphinxcontrib-mermaid = "*"
myst-parser = "*"

[tool.pixi.feature.rtd.tasks]
rtd = "sphinx-build docs/source $READTHEDOCS_OUTPUT/html"

[tool.pixi.feature.docs.dependencies]
sphinx-autobuild = "*"

[tool.pixi.feature.docs.tasks]
docs = "sphinx-autobuild docs/source docs/build"

[tool.pixi.environments]
rtd = { features = ["rtd"], no-default-feature = true }
docs = { features = ["rtd", "docs"], no-default-feature = true }
release = { features = ["release"] }
