[project]
name = "repo2wasm"
description = "Turn code repositories into Wasm based integrated development environment (IDE)"
keywords = ["Wasm"]
authors = [{name = "Raniere Gaia Costa da Silva", email = "Raniere.CostadaSilva@gesis.org"}]
maintainers = [{name = "Raniere Gaia Costa da Silva", email = "Raniere.CostadaSilva@gesis.org"}]
dependencies = ["jupyterlite-core", "jupyterlite-xeus", "pyyaml", "jupyter-server", "jupyterlab-server", "jupyter-repo2docker"]
requires-python = ">= 3.13"
dynamic = ["version"]
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Environment :: WebAssembly :: Emscripten",
    "Framework :: Jupyter :: JupyterLab",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://repo2wasm.readthedocs.io"
Documentation = "https://repo2wasm.readthedocs.io"
Repository = "https://github.com/repo2wasm/repo2wasm-py.git"
Issues = "https://github.com/repo2wasm/repo2wasm-py/issues"

[project.scripts]
repo2wasm = "repo2wasm:cli"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.version]
source = "vcs"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
repo2wasm = { path = ".", editable = true }

[tool.pixi.tasks]
[tool.pixi.tasks.test]
description = "Run test locally"
cmd = "python3 -m unittest"
cwd = "src/repo2wasm/"

[tool.pixi.dependencies]
micromamba = "*"

[tool.pixi.feature.release.dependencies]
python-build = "*"
twine = "*"

[tool.pixi.feature.release.tasks.build]
description = "Build source into Python package"
cmd = "rm -rf dist; python -m build"

[tool.pixi.feature.release.tasks.upload]
description = "Upload package to PyPI"
cmd = "python3 -m twine upload --repository pypi dist/*"
depends-on = ["build"]

[tool.pixi.feature.ci.dependencies]
pre-commit = "*"

[tool.pixi.feature.ci.tasks.pre-commit]
description = "Run pre-commit locally"
cmd = "pre-commit run --all-files"

[tool.pixi.feature.rtd.dependencies]
sphinx = "*"
sphinx_rtd_theme = "*"
sphinxcontrib-mermaid = "*"
myst-parser = "*"

[tool.pixi.feature.rtd.tasks.rtd]
description = "Build documentation as Read The Docs"
cmd = "sphinx-build --builder dirhtml docs/source $READTHEDOCS_OUTPUT/html"

[tool.pixi.feature.docs.dependencies]
sphinx-autobuild = "*"

[tool.pixi.feature.docs.tasks.docs]
description = "Start documentation preview server"
cmd = "sphinx-autobuild --builder dirhtml docs/source docs/build"

[tool.pixi.environments]
ci = { features = ["ci"], no-default-feature = true }
rtd = { features = ["rtd"], no-default-feature = true }
docs = { features = ["rtd", "docs"], no-default-feature = true }
release = { features = ["release"] }
